fix file_put_contents for sub directories
Signed-off-by: Cody Baker <cody@codyrobert.com>

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-header">
 	<div class="wrap">
 	
-		<h1 class="site-title"><a href="{{ site.baseurl }}"><i class="mdi mdi-menu"></i> {{ site.title }}</a></h1>
+		<h1 class="site-title"><a href="{{ site.baseurl }}"><i class="mdi mdi-cloud"></i> <?php echo $_SERVER['REQUEST_URI']; ?></a></h1>
 		
 		<nav class="site-nav view-mode">
 			<ul>
