Adjust breadcrumb linking

--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -12,8 +12,8 @@
 	
 	{% include footer.html %}
 	
-	<script src="{{ "/media/vendor/jquery/dist/jquery.min.js" | prepend: site.baseurl }}"></script>
-	<script src="{{ "/media/js/master.js" | prepend: site.baseurl }}"></script>
+	<script src="{{ "media/vendor/jquery/dist/jquery.min.js" | prepend: site.baseurl }}"></script>
+	<script src="{{ "media/js/master.js" | prepend: site.baseurl }}"></script>
 	
 </body>
 	
