--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,9 +7,7 @@
 	<title>{{ site.title }} <?php echo $_SERVER['REQUEST_URI']; ?></title>
 	<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 	
-	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-	
-	<link rel="stylesheet" href="{{ "/media/vendor/mdi/css/materialdesignicons.min.css" | prepend: site.baseurl }}" />
-	<link rel="stylesheet" href="{{ "/media/css/master.css" | prepend: site.baseurl }}">
+	<link rel="stylesheet" href="{{ "media/vendor/mdi/css/materialdesignicons.min.css" | prepend: site.baseurl }}" />
+	<link rel="stylesheet" href="{{ "media/css/master.css" | prepend: site.baseurl }}">
 	
 </head>
