--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -4,6 +4,7 @@
 	background: mix($colorWhite, $colorGrey, 95%);
 	border-bottom: 1px solid rgba(0, 0, 0, .1);
 	box-sizing: border-box;
+	color: $colorGrey;
 	height: $headerHeight;
 	left: 0;
 	position: fixed;
