--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>{{ site.title }} <?php echo $_SERVER['REQUEST_URI']; ?></title>
+	<title>{{ site.title }}<?php echo str_replace('/', ' / ', $_SERVER['REQUEST_URI']); ?></title>
 	<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 	
 	<link rel="stylesheet" href="{{ "media/vendor/mdi/css/materialdesignicons.min.css" | prepend: site.baseurl }}" />
