Include css for markdown

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
 	<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 	
 	<link rel="stylesheet" href="{{ "media/vendor/mdi/css/materialdesignicons.min.css" | prepend: site.baseurl }}" />
+	<link rel="stylesheet" href="{{ "media/vendor/github-markdown-css/github-markdown.css" | prepend: site.baseurl }}" />
 	<link rel="stylesheet" href="{{ "media/css/master.css" | prepend: site.baseurl }}">
 	
 </head>
