--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -7,7 +7,7 @@
 	
 	{% include header.html %}
 
-	<div id="content" class="page-content wrap view-mode"></div>
+	<div id="content" class="page-content wrap markdown-body view-mode"></div>
 	<textarea id="editor" class="page-content wrap edit-mode"></textarea>
 	
 	{% include footer.html %}
