--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -6,13 +6,15 @@ body {
 .wrap {
 	margin: 0 auto;
 	max-width: $pageWidth;
-	padding: 0 ($gutterWidth / 2);
+	padding-left: ($gutterWidth / 2);
+	padding-right: ($gutterWidth / 2);
 	overflow: hidden;
 	zoom: 1;
 }
 
 .page-content {
-	padding: 40px 0;
+	padding-bottom: 40px;
+	padding-top: 40px;
 	position: relative;
 	z-index: 10;
 }
