Added image uploading

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,6 +35,7 @@
 		
 		<nav class="site-nav edit-mode">
 			<ul>
+				<li><a onclick="app.toggleMediaBrowser();"><i class="mdi mdi-folder-image"></i></a></li>
 				<li><a onclick="app.closeEditMode();"><i class="mdi mdi-close"></i></a></li>
 			</ul>
 		</nav>
