--- a/_sass/_edit_mode.scss
+++ b/_sass/_edit_mode.scss
@@ -36,6 +36,7 @@ html.edit-mode {
 		border: 0;
 		color: $colorWhite;
 		display: block;
+		font-family: monospace;
 		font-size: $fontSize;
 		outline: none;
 		overflow: auto;
